--- a/css/styles.css
+++ b/css/styles.css
@@ -9,6 +9,35 @@ body {
     font-family: Arial, Helvetica, sans-serif;
 }
 
+.board {
+
+}
+
+table,
+td {
+    margin-top: 200px;
+    margin: auto;
+    border: 3px solid black;
+    border-collapse: collapse;
+    /* background-color: aqua; */
+}
+.board td {
+    background-color: dimgray;
+    margin: auto;
+    border: 3px solid black;
+    border-collapse: collapse;
+    width: 50px;
+    height: 50px;
+    text-align: center;
+    transition: 0.5s;
+    padding: 10px;
+}
+
+.board td:hover {
+    background-color: lightsalmon;
+}
+
+
 h1 {
     /* background-color: beige; */
     font-size: 60px;
