--- a/css/styles.css
+++ b/css/styles.css
@@ -9,15 +9,11 @@ body {
     font-family: Arial, Helvetica, sans-serif;
 }
 
-.board {
-
-}
-
 table,
 td {
     margin-top: 200px;
-    margin: auto;
-    border: 3px solid black;
+    margin: 100px auto;
+    border: 5px solid black;
     border-collapse: collapse;
     /* background-color: aqua; */
 }
@@ -26,15 +22,17 @@ td {
     margin: auto;
     border: 3px solid black;
     border-collapse: collapse;
-    width: 50px;
-    height: 50px;
+    width: 60px;
+    height: 60px;
+    color: black;
+    font-size: 32px;
     text-align: center;
     transition: 0.5s;
     padding: 10px;
 }
 
 .board td:hover {
-    background-color: lightsalmon;
+    background-color: rgb(241, 247, 82);
 }
 
 
