--- a/css/styles.css
+++ b/css/styles.css
@@ -6,13 +6,41 @@ body {
     position: relative;
     text-align: center;
     background-color: blanchedalmond;
-    font-family: Arial, Helvetica, sans-serif;
+    /* font-family: Arial, Helvetica, sans-serif; */
+}
+
+.level {
+    font-size: 32px;
+    margin: 30px 5px;
+    width: 200px;
+    border-radius: 16px;
+    font-weight: bold;
+}
+
+.level1 {
+    background-color: rgb(225, 225, 65);
+}
+.level2 {
+    background-color: rgb(202, 133, 30);
+}
+.level3 {
+    background-color: rgb(238, 60, 60);
+}
+
+.time {
+    color: black;
+    background-color: cadetblue;
+    border-radius: 5px;
+    offset-position: 20%;
+    width: 120px;
+    height: auto;
+    font-size: 28px;
+    margin: 2px 60%;
 }
 
 table,
 td {
-    margin-top: 200px;
-    margin: 100px auto;
+    margin: 10px auto;
     border: 5px solid black;
     border-collapse: collapse;
     /* background-color: aqua; */
@@ -35,6 +63,9 @@ td {
     background-color: rgb(241, 247, 82);
 }
 
+.restart button {
+    font-size: 32px;
+}
 
 h1 {
     /* background-color: beige; */
