--- a/css/styles.css
+++ b/css/styles.css
@@ -11,7 +11,7 @@ body {
 
 .level {
     font-size: 32px;
-    margin: 30px 5px;
+    margin: 10px 5px;
     width: 200px;
     border-radius: 16px;
     font-weight: bold;
@@ -27,15 +27,32 @@ body {
     background-color: rgb(238, 60, 60);
 }
 
+.user panel {
+    text-align: center;
+    display: flex;
+    justify-content: center;
+}
+
 .time {
+    display: inline;
     color: black;
     background-color: cadetblue;
     border-radius: 5px;
-    offset-position: 20%;
     width: 120px;
     height: auto;
-    font-size: 28px;
-    margin: 2px 60%;
+    font-size: 48px;
+    /* margin: 2px 40%; */ 
+}
+
+.timer {
+    font-size: 36px;
+}
+
+.restart button {
+    font-size: 48px;
+    border-radius: 30%;
+    block-size: 65px;
+    background-color: lightsteelblue;
 }
 
 table,
@@ -63,14 +80,11 @@ td {
     background-color: rgb(241, 247, 82);
 }
 
-.restart button {
-    font-size: 32px;
-}
+
 
 h1 {
     /* background-color: beige; */
-    font-size: 60px;
-    padding: 15px;
+    font-size: 52px;
     color: rgb(81, 37, 60);
 }
 
