--- a/css/styles.css
+++ b/css/styles.css
@@ -9,37 +9,40 @@ body {
 }
 
 .level {
-    font-size: 24px;
+    font-size: 20px;
     margin: 5px 5px;
     width: 160px;
-    border-radius: 16px;
+    height: 30px;
+    border-radius: 0% 35%;
     font-weight: bold;
 }
 
 .level1 {
     background-color: rgb(225, 225, 65);
 }
+
 .level2 {
     background-color: rgb(202, 133, 30);
 }
+
 .level3 {
     background-color: rgb(238, 60, 60);
 }
 
-.user panel {
-    text-align: center;
+.user-panel {
     display: flex;
     justify-content: center;
+    margin: 10px;
 }
 
 .time {
-    display: inline;
     color: black;
     background-color: cadetblue;
     border-radius: 5px;
     width: 120px;
-    height: auto;
+    height: 48px;
     font-size: 36px;
+    margin: 7px 20px;
 }
 
 .timer {
@@ -47,13 +50,13 @@ body {
 }
 
 .mines {
-    display: inline;
     color: black;
     background-color: cadetblue;
     border-radius: 5px;
     width: 120px;
-    height: auto;
+    height:48px;
     font-size: 36px;
+    margin: 7px 20px;
 }
 
 .mines-counter {
@@ -65,6 +68,7 @@ body {
     border-radius: 30%;
     block-size: 50px;
     background-color: lightsteelblue;
+    margin: 5px 20px;
 }
 
 table,
@@ -72,39 +76,42 @@ td {
     margin: 10px auto;
     border: 5px solid black;
     border-collapse: collapse;
-    /* background-color: aqua; */
 }
+
 .board td {
-    background-color: dimgray;
+    background-color:rgb(182, 182, 182) ; 
     margin: auto;
     border: 3px solid black;
     border-collapse: collapse;
-    width: 50px;
-    height: 50px;
+    width: 45px;
+    height: 45px;
     color: black;
-    font-size: 28px;
+    font-size: 24px;
     text-align: center;
     transition: 0.5s;
-    padding: 10px;
+    padding: 5px;
 }
 
 .board td:hover {
     background-color: rgb(241, 247, 82);
 }
 
-
-
 h1 {
-    /* background-color: beige; */
-    font-size: 40px;
+    font-size: 36px;
     color: rgb(81, 37, 60);
-    margin: 5px;
+    margin: 0px;
+}
+
+h3 {
+    font-size: 24px;
+    color: rgb(81, 37, 60);
+    margin: 0px;
 }
 
 .footer {
-    font-size: 24px;
+    font-size: 18px;
     background-color: rgba(169, 169, 169, 0.34);
-    padding: 5px;
+    padding: 3px;
     margin-bottom: 5px;
     border-top: 10px double rgb(81, 37, 60);
     position: fixed;
