--- a/css/styles.css
+++ b/css/styles.css
@@ -17,16 +17,30 @@ body {
     font-weight: bold;
 }
 
+.level:hover {
+    cursor: pointer;
+
+}
+
 .level1 {
     background-color: rgb(225, 225, 65);
 }
+.level1:hover {
+    background-color: rgb(246, 246, 7);
+}
 
 .level2 {
-    background-color: rgb(202, 133, 30);
+    background-color: rgb(207, 150, 64);
+}
+.level2:hover {
+    background-color: rgb(247, 149, 3);
 }
 
 .level3 {
-    background-color: rgb(238, 60, 60);
+    background-color: rgb(214, 74, 74);
+}
+.level3:hover {
+    background-color: rgb(247, 3, 3);
 }
 
 .user-panel {
@@ -65,10 +79,14 @@ body {
 
 .restart button {
     font-size: 36px;
-    border-radius: 30%;
+    border-radius: 50%;
     block-size: 50px;
     background-color: lightsteelblue;
     margin: 5px 20px;
+}
+.restart button:hover {
+background-color: rgb(237, 242, 249);
+cursor: pointer;
 }
 
 table,
@@ -94,6 +112,7 @@ td {
 
 .board td:hover {
     background-color: rgb(241, 247, 82);
+    cursor: pointer;
 }
 
 h1 {
