--- a/css/styles.css
+++ b/css/styles.css
@@ -127,6 +127,16 @@ h3 {
     margin: 0px;
 }
 
+.lives {
+    margin-right: 40px;
+    color: deepskyblue;
+}
+
+.best-time {
+    color: deepskyblue;
+    /* margin-left: 30px; */
+}
+
 .footer {
     font-size: 18px;
     background-color: rgba(169, 169, 169, 0.34);
